# Point

./: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.dev.yml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
apk-server/: index.html  server.py  version.json
app-registry/: Dockerfile  docker-compose.yml  server.py
docs/: location-strategy.html  website-claims-audit.md
docs/research/: 01-bridge-feasibility.md  02-mls-and-flutter-rust-ffi.md  (+6 more)
point/: analysis_options.yaml  firebase.json  pubspec.yaml
point-core/: Cargo.toml
point-core/src/: crypto.rs  lib.rs
point-server/: Cargo.toml  Dockerfile  docker-compose.yml
point-server/migrations/: 001_initial.sql  002_group_settings.sql  003_share_requests.sql  004_places_geometry.sql  005_location_history.sql  007_polygon_places.sql  008_personal_places.sql  009_group_invites.sql  010_fcm_tokens.sql  011_zone_consent.sql  012_bridged_entities.sql  013_mls_keys.sql  014_ghost_flag.sql  015_federated_users.sql  016_password_changed_at.sql
point-server/src/: config.rs  error.rs  fcm.rs  federation_keys.rs  lib.rs  main.rs
point-server/src/api/: admin.rs  auth.rs  bridge_entities.rs  federation.rs  ghost.rs  groups.rs  history.rs  invites.rs  items.rs  mls.rs  mod.rs  places.rs  shares.rs  zones.rs
point-server/src/db/: bridge_registry.rs  bridged_entities.rs  bridges.rs  group_invites.rs  groups.rs  history.rs  invites.rs  items.rs  locations.rs  mls.rs  mod.rs  places.rs  shares.rs  users.rs  zone_consents.rs
point-server/src/ws/: handler.rs  hub.rs  mod.rs  presence.rs
point/rust/: Cargo.toml
point/rust/src/: frb_generated.rs
point/rust/src/api/: crypto.rs
scripts/: fake_users.py  rebuild-apk.sh
website/: docker-compose.yml  nginx-dev.conf  nginx.conf  package-lock.json  package.json
(+116 files in other folders)
